[43] Remove unneeded modular arguments for the domain test.
Signed-off-by: James R. Perkins <jperkins@redhat.com>