@@ -8,8 +8,6 @@ package org.wildfly.plugin.tools;
 import java.io.IOException;
 import java.util.Collections;
 import java.util.Set;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 import org.jboss.as.controller.client.ModelControllerClient;
 import org.jboss.as.controller.client.helpers.ClientConstants;
@@ -31,31 +29,6 @@ import org.wildfly.plugin.tools.server.ServerManager;
 @SuppressWarnings("StaticVariableMayNotBeInitialized")
 public class DomainDeploymentManagerIT extends AbstractDeploymentManagerTest {
     private static final String DEFAULT_SERVER_GROUP = "main-server-group";
-    // Workaround for WFCORE-4121
-    private static final String[] MODULAR_JDK_ARGUMENTS = {
-            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-            "--add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED",
-            "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
-            "--add-modules=java.se",
-    };
-    private static final boolean IS_MODULAR_JDK;
-
-    static {
-        final String javaVersion = System.getProperty("java.specification.version");
-        int vmVersion;
-        try {
-            final Matcher matcher = Pattern.compile("^(?:1\\.)?(\\d+)$")
-                    .matcher(javaVersion); // match 1.<number> or <number>
-            if (matcher.find()) {
-                vmVersion = Integer.parseInt(matcher.group(1));
-            } else {
-                throw new RuntimeException("Unknown version of jvm " + javaVersion);
-            }
-        } catch (Exception e) {
-            vmVersion = 8;
-        }
-        IS_MODULAR_JDK = vmVersion > 8;
-    }
 
     private static Process process;
     private static DomainClient client;
@@ -71,9 +44,6 @@ public class DomainDeploymentManagerIT extends AbstractDeploymentManagerTest {
                 Assertions.fail("A WildFly server is already running: " + ContainerDescription.lookup(client));
             }
             final DomainCommandBuilder commandBuilder = DomainCommandBuilder.of(Environment.WILDFLY_HOME);
-            if (IS_MODULAR_JDK) {
-                commandBuilder.addHostControllerJavaOptions(MODULAR_JDK_ARGUMENTS);
-            }
             process = Launcher.of(commandBuilder).launch();
             consoleConsomer = ConsoleConsumer.start(process, System.out);
             domainManager = ServerManager.builder().process(process).client(client).domain();
@@ -115,8 +85,9 @@ public class DomainDeploymentManagerIT extends AbstractDeploymentManagerTest {
     @Test
     public void testFailedDeploy() throws Exception {
         // Expect a failure with no server groups defined
-        try (Deployment failedDeployment = createDefaultDeployment("test-failed-deployment.war")
-                .setServerGroups(Collections.<String> emptySet())) {
+        try (
+                Deployment failedDeployment = createDefaultDeployment("test-failed-deployment.war")
+                        .setServerGroups(Collections.<String> emptySet())) {
             assertFailed(deploymentManager.deploy(failedDeployment));
             assertDeploymentDoesNotExist(failedDeployment);
         }
@@ -125,7 +96,8 @@ public class DomainDeploymentManagerIT extends AbstractDeploymentManagerTest {
     @Test
     public void testFailedDeployMulti() throws Exception {
         // Expect a failure with no server groups defined
-        try (Deployment failedDeployment1 = createDefaultDeployment("test-failed-deployment-1.war");
+        try (
+                Deployment failedDeployment1 = createDefaultDeployment("test-failed-deployment-1.war");
                 Deployment failedDeployment2 = createDefaultDeployment("test-failed-deployment-2.war")
                         .setServerGroups(Set.of())) {
             final Set<Deployment> failedDeployments = Set.of(failedDeployment1, failedDeployment2);
@@ -139,8 +111,9 @@ public class DomainDeploymentManagerIT extends AbstractDeploymentManagerTest {
     @Test
     public void testFailedForceDeploy() throws Exception {
         // Expect a failure with no server groups defined
-        try (Deployment failedDeployment = createDefaultDeployment("test-failed-deployment.war")
-                .setServerGroups(Collections.emptySet())) {
+        try (
+                Deployment failedDeployment = createDefaultDeployment("test-failed-deployment.war")
+                        .setServerGroups(Collections.emptySet())) {
             assertFailed(deploymentManager.forceDeploy(failedDeployment));
             assertDeploymentDoesNotExist(failedDeployment);
         }
@@ -149,8 +122,9 @@ public class DomainDeploymentManagerIT extends AbstractDeploymentManagerTest {
     @Test
     public void testFailedRedeploy() throws Exception {
         // Expect a failure with no server groups defined
-        try (Deployment failedDeployment = createDefaultDeployment("test-redeploy.war")
-                .setServerGroups(Collections.emptySet())) {
+        try (
+                Deployment failedDeployment = createDefaultDeployment("test-redeploy.war")
+                        .setServerGroups(Collections.emptySet())) {
             assertFailed(deploymentManager
                     .redeploy(failedDeployment));
         }
